# serializer version: 1
# name: TestMetaxifyCodeVersion.test_metaxify_appends_to_existing_code_version
  'v1.0.0,metaxy:16616c82'
# ---
# name: TestMetaxifyCodeVersion.test_metaxify_asset_spec_injects_code_version
  'metaxy:16616c82'
# ---
# name: TestMetaxifyCodeVersion.test_metaxify_injects_code_version
  'metaxy:16616c82'
# ---
# name: TestMetaxifyDescription.test_metaxify_asset_spec_injects_description
  '''
  This is the feature documentation.
  
  It describes what this feature does.
  '''
# ---
# name: TestMetaxifyDescription.test_metaxify_injects_description_from_docstring
  '''
  This is the feature documentation.
  
  It describes what this feature does.
  '''
# ---
